// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should render correctly with active 'Details' tab 1`] = `
<div>
  <div
    class="movie-card__desc"
  >
    <nav
      class="movie-nav movie-card__nav"
    >
      <ul
        class="movie-nav__list"
      >
        <li
          class="movie-nav__item "
        >
          <a
            class="movie-nav__link"
            data-testid="Overview"
            data-value="Overview"
            href="#"
          >
            Overview
          </a>
        </li>
        <li
          class="movie-nav__item movie-nav__item--active"
        >
          <a
            class="movie-nav__link"
            data-testid="Details"
            data-value="Details"
            href="#"
          >
            Details
          </a>
        </li>
        <li
          class="movie-nav__item "
        >
          <a
            class="movie-nav__link"
            data-testid="Reviews"
            data-value="Reviews"
            href="#"
          >
            Reviews
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="movie-card__text movie-card__row"
    >
      <div
        class="movie-card__text-col"
      >
        <p
          class="movie-card__details-item"
        >
          <strong
            class="movie-card__details-name"
          >
            Director
          </strong>
          <span
            class="movie-card__details-value"
            style="white-space: pre;"
          >
            Kit Monkman
          </span>
        </p>
        <p
          class="movie-card__details-item"
        >
          <strong
            class="movie-card__details-name"
          >
            Starring
          </strong>
          <span
            class="movie-card__details-value"
            style="white-space: pre;"
          >
            Mark Rowley, 
Al Weaver, 
David Bradley
          </span>
        </p>
      </div>
      <div
        class="movie-card__text-col"
      >
        <p
          class="movie-card__details-item"
        >
          <strong
            class="movie-card__details-name"
          >
            Run Time
          </strong>
          <span
            class="movie-card__details-value"
          >
            2h 1m
          </span>
        </p>
        <p
          class="movie-card__details-item"
        >
          <strong
            class="movie-card__details-name"
          >
            Genre
          </strong>
          <span
            class="movie-card__details-value"
            style="white-space: pre;"
          >
            Drama
          </span>
        </p>
        <p
          class="movie-card__details-item"
        >
          <strong
            class="movie-card__details-name"
          >
            Released
          </strong>
          <span
            class="movie-card__details-value"
          >
            2018
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs should render correctly with active 'Overview' tab 1`] = `
<div>
  <div
    class="movie-card__desc"
  >
    <nav
      class="movie-nav movie-card__nav"
    >
      <ul
        class="movie-nav__list"
      >
        <li
          class="movie-nav__item movie-nav__item--active"
        >
          <a
            class="movie-nav__link"
            data-testid="Overview"
            data-value="Overview"
            href="#"
          >
            Overview
          </a>
        </li>
        <li
          class="movie-nav__item "
        >
          <a
            class="movie-nav__link"
            data-testid="Details"
            data-value="Details"
            href="#"
          >
            Details
          </a>
        </li>
        <li
          class="movie-nav__item "
        >
          <a
            class="movie-nav__link"
            data-testid="Reviews"
            data-value="Reviews"
            href="#"
          >
            Reviews
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="movie-rating"
    >
      <div
        class="movie-rating__score"
      >
        7.9
      </div>
      <p
        class="movie-rating__meta"
      >
        <span
          class="movie-rating__level"
        >
          Good
        </span>
        <span
          class="movie-rating__count"
        >
          240
           ratings
        </span>
      </p>
    </div>
    <div
      class="movie-card__text"
    >
      <p>
        After a brilliant victory in battle, Macbeth returns to an indolent court where honor is dispensed by whim.
      </p>
      <p
        class="movie-card__director"
      >
        <strong>
          Director: 
          Kit Monkman
        </strong>
      </p>
      <p
        class="movie-card__starring"
      >
        <strong>
          Starring: 
          Mark Rowley, Al Weaver, David Bradley
           and other
        </strong>
      </p>
    </div>
  </div>
</div>
`;
